@@ -1,14 +1,21 @@
 # tests for iucn_summary fxn in taxize
 context("tax_name")
 
-tmp_itis <- tax_name(query="Baetis", get="family", db="itis")
-tmp_ncbi  <- tax_name(query="Baetis", get="family", db="ncbi")
+tmp_itis <- tax_name(query="Baetis", get=c("family", "order"), db="itis")
+tmp_ncbi  <- tax_name(query="Baetis", get=c("family", "order"), db="ncbi")
+tmp_na <- tax_name(query="xxxxx", get=c("family", "order"), db="ncbi")
 
 test_that("tax_name returns the correct class", {
-	expect_that(tmp_itis, is_a("character"))
-	expect_that(tmp_ncbi, is_a("character"))
+	expect_that(tmp_itis, is_a("data.frame"))
+	expect_that(tmp_ncbi, is_a("data.frame"))
+	expect_that(tmp_na, is_a("data.frame"))
+	expect_that(ncol(tmp_itis), equals(2))
+	expect_that(ncol(tmp_ncbi), equals(2))
+	expect_that(ncol(tmp_na), equals(2))
 })
 
 test_that("tax_name returns the correct value", {
-	expect_equal(tmp_ncbi, "Baetidae")
+	expect_equal(tmp_ncbi$family, "Baetidae")
+	expect_equal(tmp_ncbi$order, "Ephemeroptera")
+	expect_true(all(is.na(tmp_na[1, ])))
 })
